--- a/index.html
+++ b/index.html
@@ -41,33 +41,33 @@
             </h2>
             <div id="projects">
                 <div class="card">
-                    <a href id="profile-link" target="_blank">
-                        <img src="https://images.pexels.com/photos/884788/pexels-photo-884788.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img" />
-                        <p id="project-title">project title</p>
+                    <a href="https://text-magic-8c36d.netlify.app/" id="profile-link" target="_blank">
+                        <img src="https://www.befunky.com/images/prismic/00051caf-f04b-4ee1-bab8-b32fbe00f7ad_how-to_text-editor-13.svg" alt="img" />
+                        <p id="project-title">Text Tool</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href id="profile-link" target="_blank">
-                        <img src="https://images.pexels.com/photos/884788/pexels-photo-884788.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img" />
-                        <p id="project-title">project title</p>
+                    <a href="https://cal-js-z956945.netlify.app/" id="profile-link" target="_blank">
+                        <img src="https://media.istockphoto.com/id/603187710/vector/calculator-icon-with-long-shadow.jpg?s=612x612&w=0&k=20&c=SiAhO7PRi0PSY4I9E1B-5DiBdZ1P8vivsbmJWV2Bx5c=" alt="img" />
+                        <p id="project-title">Calculator</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href id="profile-link" target="_blank">
-                        <img src="https://images.pexels.com/photos/884788/pexels-photo-884788.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img" />
-                        <p id="project-title">project title</p>
+                    <a href="https://weather-info-today.netlify.app/" id="profile-link" target="_blank">
+                        <img src="https://play-lh.googleusercontent.com/pCQw51XRP4UPr-FCYDjvNnEpFa0HDGJjjLDldN3rmw4KkwhqPu0PZXE8EopmAxzH9mQ" alt="img" />
+                        <p id="project-title">Weather App</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href id="profile-link" target="_blank">
-                        <img src="https://images.pexels.com/photos/884788/pexels-photo-884788.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img" />
-                        <p id="project-title">Project title</p>
+                    <a href="https://musical-creponne-c5cebe.netlify.app/" id="profile-link" target="_blank">
+                        <img src="https://img.freepik.com/premium-vector/tic-tac-toe-flat-illustration_454371-848.jpg" alt="img" />
+                        <p id="project-title">Tic Tac Toe</p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href id="profile-link" target="_blank">
-                        <img src="https://images.pexels.com/photos/884788/pexels-photo-884788.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="img" />
-                        <p id="project-title">project title</p>
+                    <a href="https://hair-affair.netlify.app" id="profile-link" target="_blank">
+                        <img src="./hair-salon-project.png" alt="img" />
+                        <p id="project-title">Hair Salon</p>
                     </a>
                 </div>
                 <div class="card">
